In-App Billing success!

--- a/www/templates/choose-league.html
+++ b/www/templates/choose-league.html
@@ -5,7 +5,7 @@
 </div>
 <ul class="list">
 
-    <li class="item item-checkbox" ng-repeat="league in leagues">
+    <li class="item item-checkbox" collection-repeat="league in leagues">
         <label class="checkbox checkbox-assertive">
             <input type="checkbox" ng-model="league.value">
         </label>
