--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -64,6 +64,12 @@
                        ng-class="{'menu-active': urlArgs.first == 'Rate Us'}">
                         Rate Us
                     </a>
+
+
+                    <a class="item" ng-click="changeMenu('Test');"
+                       ng-class="{'menu-active': urlArgs.first == 'Test'}">
+                        Test
+                    </a>
                 </div>
             </ion-content>
         </ion-side-menu>
@@ -78,6 +84,7 @@
         <h1 class="title elements">Settings
         </h1>
     </ion-header-bar>
+    <ion-content></ion-content>
 
 </div>
 
