--- a/www/templates/my-tabs-content.html
+++ b/www/templates/my-tabs-content.html
@@ -17,8 +17,11 @@
 <ion-content class="has-header has-subheader mainContent" style="top: 164px !important">
     <div>
         <div ng-if="urlArgs.star == '4 Star'">
-            <div ng-if="filteredResult[0].length == 0" class="row">
-                <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto">There are no tips available at this time</h4>
+            <div ng-if="filteredResult[0].length == 0  && internet != false" class="row">
+                <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto; padding: 10px">There are no tips available at this time</h4>
+            </div>
+            <div ng-if="internet == false" class="row">
+                <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">Please connect to the internet and try again</h4>
             </div>
             <div ng-if="content[0].success == 1" class="row newsFeed"
                  ng-repeat="record in filteredResult[0]">
@@ -40,8 +43,11 @@
             </div>
         </div>
         <div ng-if="urlArgs.star == '5 Star'" class="myList">
-            <div ng-if="filteredResult[1].length == 0" class="row">
-                <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto">There are no tips available at this time</h4>
+            <div ng-if="filteredResult[1].length == 0  && internet != false" class="row">
+                <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto; padding: 10px">There are no tips available at this time</h4>
+            </div>
+            <div ng-if="internet == false" class="row">
+                <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto; padding: 10px">Please connect to the internet and try again</h4>
             </div>
             <div ng-if="content[1].success == 1" class="row newsFeed"
                  ng-repeat="record in filteredResult[1]">
