--- a/www/templates/my-tabs-content.html
+++ b/www/templates/my-tabs-content.html
@@ -14,7 +14,7 @@
 
     <!--</button>-->
 <!--</div>-->
-<ion-content class="has-header has-subheader mainContent" style="top: 164px !important">
+<ion-content class="has-header has-subheader" style="top: 164px !important">
     <div>
         <div ng-if="urlArgs.star == '4 Star'">
             <div ng-if="filteredResult[0].length == 0  && internet != false" class="row">
@@ -23,7 +23,7 @@
             <div ng-if="internet == false" class="row">
                 <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">Please connect to the internet and try again</h4>
             </div>
-            <div ng-if="content[0].success == 1" class="row newsFeed"
+            <div ng-if="content[0].success == 1" class="row newsFeed" style="text-align: center"
                  ng-repeat="record in filteredResult[0]">
                 <div class="col">
                     <div class="row">
