--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -47,23 +47,25 @@
                         <span class="badge badge-assertive" ng-if="false">{{badges.NFLTips}}</span>
                     </a>
 
-                    <a class="item item-icon-left item-icon-right" ng-click="changeMenu('Boxing Tips'); getJson();"
-                       ng-class="{'menu-active': urlArgs.first == 'Boxing Tips'}">
-                        <i class="icon ion-ios-nutrition-outline dark"></i>
+                    <a class="item item-icon-right" ng-click="changeMenu('Boxing Tips'); getJson();"
+                       ng-class="{'menu-active': urlArgs.first == 'Boxing Tips'}"
+                       style="padding: 16px 54px 16px 54px">
+                        <img src="css/icons/boxing.svg" class="my-img-icon">
                         Boxing Tips
                         <i class="icon ion-android-lock my-icon" ng-if="true"></i>
                     </a>
 
-                    <a class="item item-icon-left item-icon-right" ng-click="changeMenu('Cricket Tips'); getJson();"
-                       ng-class="{'menu-active': urlArgs.first == 'Cricket Tips'}">
-                        <i class="icon ion-ios-flask dark"></i>
+                    <a class="item item-icon-right" ng-click="changeMenu('Cricket Tips'); getJson();"
+                       ng-class="{'menu-active': urlArgs.first == 'Cricket Tips'}"
+                            style="padding: 16px 54px 16px 54px">
+                        <img src="css/icons/cricket.svg" class="my-img-icon">
                         Cricket Tips
                         <i class="icon ion-android-lock my-icon" ng-if="true"></i>
                     </a>
 
-                    <a class="item item-icon-left item-icon-right" ng-click="changeMenu('Tennis Tips'); getJson();" style="border-bottom: 1px solid white"
+                    <a class="item item-icon-left item-icon-right" ng-click="changeMenu('Tennis Tips'); getJson();" style="border-bottom: 4px solid white"
                        ng-class="{'menu-active': urlArgs.first == 'Tennis Tips'}">
-                        <i class="icon ion-ios-football-outline dark"></i>
+                        <img src="css/icons/tennis.svg" class="my-img-icon">
                         Tennis Tips
                         <i class="icon ion-android-lock my-icon" ng-if="true"></i>
                     </a>
