--- a/www/templates/my-side-menu-content.html
+++ b/www/templates/my-side-menu-content.html
@@ -149,10 +149,6 @@
                     </div>
                 </ion-content>
             </div>
-
-
-
-
     </ion-pane>
 </div>
 
@@ -190,49 +186,26 @@
         </div>
     </div>
 
-    <div ng-if="sideMenuOptions['Tennis Tips']">
-        <div ng-if="stock[0] == '' && internet != false" class="row ">
-            <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">There are no tips available at this time</h4>
-        </div>
-        <div ng-if="internet == false" class="row">
-            <h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">Please connect to the internet and try again</h4>
-        </div>
-        <div ng-repeat="st in stock[0]" class="row newsFeed"
-             ng-class-even="'listEven'" ng-class-odd="'listOdd'">
-            <div class="col">{{st.Game}}</div>
-            <div class="col">{{st.Tip}}</div>
-            <div class="col">{{st.Date}}</div>
-        </div>
-    </div>
+    <!--<div ng-if="sideMenuOptions['Tennis Tips']">-->
+        <!--<div ng-if="stock[0] == '' && internet != false" class="row ">-->
+            <!--<h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">There are no tips available at this time</h4>-->
+        <!--</div>-->
+        <!--<div ng-if="internet == false" class="row">-->
+            <!--<h4 style="color:white; font-weight: normal; margin-left: auto; margin-right: auto;  padding: 10px">Please connect to the internet and try again</h4>-->
+        <!--</div>-->
+        <!--<div ng-repeat="st in stock[0]" class="row newsFeed"-->
+             <!--ng-class-even="'listEven'" ng-class-odd="'listOdd'">-->
+            <!--<div class="col">{{st.Game}}</div>-->
+            <!--<div class="col">{{st.Tip}}</div>-->
+            <!--<div class="col">{{st.Date}}</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
     <div ng-if="sideMenuOptions['Accuracy']">
         <div ng-show="urlArgs.first == 'Accuracy'">
             <div class="row newsFeed" ng-repeat="(key,value) in accuracy | myOrderBy : accuracyorder" >
                 <div class="col">{{value.name}}</div>
                 <div class="col" style="text-align:right;">{{value.percent}}%</div>
-            </div>
-        </div>
-    </div>
-
-    <div ng-if="sideMenuOptions['Statssd']">
-        <div class="newsFeed" collection-repeat="item in stats" style="text-align: center">
-            <!--<div class="row" ng-if="$first">-->
-                <!--<div class="col"  ng-repeat="(key,value) in item" ng-if="key != 'Name' && key!= 'League'">{{key}}</div>-->
-            <!--</div>-->
-            <div class="row" ng-if="item.hasOwnProperty('Name')">{{item.Name}}
-                <span ng-if="item.hasOwnProperty('League')">
-                - {{item.League}}
-                </span>
-            </div>
-            <div class="row">
-                <div class="col" ng-if="item.hasOwnProperty('P')">{{item.P}}</div>
-                <div class="col" ng-if="item.hasOwnProperty('W')">{{item.W}}</div>
-                <div class="col" ng-if="item.hasOwnProperty('D')">{{item.D}}</div>
-                <div class="col" ng-if="item.hasOwnProperty('L')">{{item.L}}</div>
-                <div class="col" ng-if="item.hasOwnProperty('GF')">{{item.GF}}</div>
-                <div class="col" ng-if="item.hasOwnProperty('GA')">{{item.GA}}</div>
-                <div class="col" ng-if="item.hasOwnProperty('GD')">{{item.GD}}</div>
-                <div class="col" ng-if="item.hasOwnProperty('Pts')">{{item.Pts}}</div>
             </div>
         </div>
     </div>
